--- a/index.html
+++ b/index.html
@@ -10,59 +10,75 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
-<br>
-<h1 class="text-center"> Bazální metabolismus</h1>
-<div class="container">
-  <div class="form-group">
-    <label for=""></label>
-    <input type="number" class="form-control" name="vyska" id="vyska" aria-describedby="helpId" placeholder=""
-      value="180" min="30" max="400">
-    <small id="helpId" class="form-text text-muted">Výška v centimetrech</small>
-  </div>
-  <div class="form-group">
-    <label for=""></label>
-    <input type="number" class="form-control" name="vaha" id="vaha" aria-describedby="helpId" placeholder="" value="80"
-      min="1" max="1000">
-    <small id="helpId" class="form-text text-muted">Váha v kilogramech</small>
-  </div>
-  <div class="form-group">
-    <label for=""></label>
-    <input type="number" class="form-control" name="vaha" id="vaha" aria-describedby="helpId" placeholder="" value="30"
-      min="1" max="200">
-    <small id="helpId" class="form-text text-muted">Věk</small>
-  </div>
-  <div class="col-sm-3">
-    <div class="form-check form-check-inline">
-      <label class="form-check-label">
-        <input class="form-check-input" type="radio" name="pohlavi" id="muz" value="muz" checked> Muž
-      </label>
-    </div>
-    <div class="form-check form-check-inline">
-      <label class="form-check-label">
-        <input class="form-check-input" type="radio" name="pohlavi" id="zena" value="zena"> Žena
-      </label>
-    </div>
-    <br>
-
-  </div>
-<div id="vysledek" class="display-4 text-center">Kolik spálím ?</div>
-</div>
 
 <body>
+  <main>
+    <br>
+    <h1 class="text-center"> Bazální metabolismus</h1>
+    <div class="container">
+      <div class="form-group">
+        <label for=""></label>
+        <input type="number" class="form-control" name="vyska" id="vyska" aria-describedby="helpId" placeholder=""
+          value="180" min="30" max="400">
+        <small id="helpId" class="form-text text-muted">Výška v centimetrech</small>
+      </div>
+      <div class="form-group">
+        <label for=""></label>
+        <input type="number" class="form-control" name="vaha" id="vaha" aria-describedby="helpId" placeholder=""
+          value="80" min="1" max="1000">
+        <small id="helpId" class="form-text text-muted">Váha v kilogramech</small>
+      </div>
+      <div class="form-group">
+        <label for=""></label>
+        <input type="number" class="form-control" name="stari" id="stari" aria-describedby="helpId" placeholder=""
+          value="30" min="1" max="200">
+        <small id="helpId" class="form-text text-muted">Věk</small>
+      </div>
+      <div class="col-sm-3">
+        <div class="form-check form-check-inline">
+          <label class="form-check-label">
+            <input class="form-check-input" type="radio" name="pohl" id="muz" value="muz" checked> Muž
+          </label>
+        </div>
+        <div class="form-check form-check-inline">
+          <label class="form-check-label">
+            <input class="form-check-input" type="radio" name="pohl" id="zena" value="zena"> Žena
+          </label>
+        </div>
+      </div>
+        <div class="form-group row">
+          <div class="offset-sm-6 col-sm-6">
+            <button type="button" id="vypocitej" class="btn btn-danger text-center">
+              Výpočet
+            </button>
+          </div>
+        </div>
+        <br>
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+      
+
+    </div>
+  </main>
+  <footer>
+    <div id="vysledek" class="display-4 text-center">Kolik spálím ?</div>
+  </footer>
+
+  <body>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
     <script src="main.js"></script>
-</body>
+  </body>
 
 </html>
